<resources>
    <string name="app_name">Currency App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_app">Currency App</string>
    <string name="questionUpdate">Когда вы хотите обновлять курсы валют?</string>
    <string name="countDays">По колличеству дней</string>
    <string name="count_enter">По количеству входов в приложение</string>
    <string name="every">Каждые</string>
    <string name="button_min_count">Кнопка уменьшить количество</string>
    <string name="start_count">1</string>
    <string name="button_max_count">Кнопка увеличить количество</string>
    <string name="days">дней</string>
    <string name="enters">входов</string>
    <string name="to_accept">Принять</string>
    <string name="update_valute">Обновить курс валют</string>
    <string name="to_calculator_valute">К калькулятору валют</string>
    <string name="setting">Настройки</string>
    <string name="code">Цифровой код:</string>
    <string name="code_valute">Код:</string>
    <string name="count">Единиц</string>
    <string name="rate">Курс</string>
    <string name="to_list_valute">К списку валют</string>
    <string name="enter_amount">Введите кол-во рублей</string>
    <string name="select_currency">Выберете валюту для конвертации</string>
</resources>