<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.screens.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/currency_app"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewUpdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionUpdate"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUpdate">

            <RadioButton
                android:id="@+id/radioButtonDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countDays"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButtonEnters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_enter" />
        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textVIewEvery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:text="@string/every"
            app:layout_constraintEnd_toStartOf="@id/imageViewButtonLeft"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />


        <ImageView
            android:id="@+id/imageViewButtonLeft"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/button_min_count"
            android:src="@drawable/ic_baseline_arrow_left_24"
            app:layout_constraintEnd_toStartOf="@id/textViewCount"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textViewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/start_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <ImageView
            android:id="@+id/imageViewButtonRight"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/button_max_count"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_arrow_right_24"
            app:layout_constraintStart_toEndOf="@+id/textViewCount"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textViewDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/days"
            app:layout_constraintStart_toEndOf="@+id/imageViewButtonRight"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textViewEnters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="8dp"
            android:text="@string/enters"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/imageViewButtonRight"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>

        <Button
            android:id="@+id/buttonAcceptCountUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_accept"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCount" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>