<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.screens.CurrencyListFragment">


    <TextView
        android:id="@+id/textViewUpdateRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/update_valute"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewUpdateRate"
        app:layout_constraintEnd_toStartOf="@+id/imageViewUpdateRate"
        app:layout_constraintTop_toTopOf="@+id/imageViewUpdateRate" />

    <ImageView
        android:id="@+id/imageViewUpdateRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/update_valute"
        android:src="@drawable/ic_baseline_loop_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewToCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/to_calculator_valute"
        android:textColor="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewToCalculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewToCalculator" />

    <ImageView
        android:id="@+id/imageViewToCalculator"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/to_calculator_valute"
        android:src="@drawable/ic_baseline_arrow_left_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewToCalculator" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewValuteList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewUpdateRate"
        app:layout_constraintBottom_toTopOf="@+id/imageViewToCalculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/setting"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewSetting"
        app:layout_constraintStart_toEndOf="@+id/imageViewSetting"
        app:layout_constraintTop_toTopOf="@+id/imageViewSetting" />
</androidx.constraintlayout.widget.ConstraintLayout>